# SOES

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  version.h.in
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
applications/linux_lan9252demo/: CMakeLists.txt  main.c  slave.c  slave.esx  slave.h  slave.xml  slave_objectlist.c
applications/raspberry_lan9252demo/: CMakeLists.txt  EasyCAT_V2_0.xml  EtherBerry.xml  S60soes  ecat_options.h  main.c  slave.esx  slave.xml  slave_objectlist.c  utypes.h
applications/raspberry_lan9252demo_default/: CMakeLists.txt  EasyCAT_V2_0.xml  EtherBerry.xml  ecat_options.h
applications/rtl_lan9252demo/: ecat_options.h  main.c  slave.c  slave_objectlist.c  utypes.h
applications/rtl_lwip_eoe/: ecat_options.h  esc_hw.c  esc_hw.h  esc_hw_eep.c  (+11 more)
applications/rtl_xmc4_dynpdo/: CMakeLists.txt  config.h  ecat_options.h  main.c  slave.esx  slave.xml  slave_objectlist.c  utypes.h
cmake/: Linux.cmake  RPIdemo.cmake  rt-kernel.cmake
soes/: .cproject  .project  CMakeLists.txt  Doxyfile  config.h  ecat_slv.c  ecat_slv.h  esc.c  esc.h  esc_coe.c  esc_coe.h  esc_eep.c  esc_eep.h  esc_eoe.c  esc_eoe.h  esc_foe.c  esc_foe.h  options.h
soes/doc/: soes.dox  tutorial.txt
soes/doc/html/: annotated.html  classes.html  esc_8c.html  esc_8h.html  esc__coe_8c.html  esc__coe_8h.html  esc__foe_8c.html  esc__foe_8h.html  files.html  functions.html  functions_vars.html  globals.html  globals_0x61.html  globals_0x62.html  globals_0x63.html  globals_0x64.html  globals_0x65.html  globals_0x66.html  globals_0x69.html  globals_0x6d.html  globals_0x6f.html  globals_0x70.html  globals_0x72.html  globals_0x73.html  globals_0x74.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  soes_8dox.html  structPACKED.html  struct__COEentdesc.html  struct__COEh.html  struct__COEobjdesc.html  struct__COEsdo.html  struct__ESCsm.html  struct__ESCsm2.html  struct__ESCvar.html  struct__FOE.html  (+11 more)
soes/hal/linux-lan9252/: esc_hw.c
soes/hal/raspberrypi-lan9252/: esc_hw.c  esc_hw.h
soes/hal/rt-kernel-lan9252/: esc_hw.c
soes/hal/rt-kernel-twrk60/: esc_hw.c
soes/hal/rt-kernel-xmc4/: esc_hw.c  esc_hw.h  esc_hw_eep.c  esc_hw_eep.h
soes/hal/tiesc/: applInterface.h  ecat_def.h  ecatslv.h  esc_hw.c  esc_hw.h  esc_hw_eep.c  esc_hw_eep.h
soes/hal/xmc4/: esc_hw.c  esc_hw.h  esc_hw_eep.c  esc_hw_eep.h
soes/include/sys/gcc/: cc.h
soes/linux/kernel-lan9252/: Kconfig
soes/linux_drv/lan9252/: Makefile  spi-lan9252.c
(+70 files in other folders)
